# local-agent

./: bun.lockb  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  gloabl.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: embed.rs  lib.rs  main.rs
src/hooks/: useExecuteMigrations.ts  useGetAllTables.ts
src/lib/: const.ts  embedding.ts  file.ts  store.ts
src/lib/db/: migrations.ts
src/lib/db/sql/: init.sql  system-message.sql
src/modules/: OnBoarding.tsx
src/ui/components/: Button.tsx  Dropdown.tsx
src/utils/ml/llm/: index.ts
tauri-plugin-vector-store/: Cargo.toml  README.md  build.rs  package.json
tauri-plugin-vector-store/guest-js/: index.ts
tauri-plugin-vector-store/permissions/: default.toml
tauri-plugin-vector-store/permissions/autogenerated/: reference.md
tauri-plugin-vector-store/permissions/autogenerated/commands/: embed.toml  query_sql.toml
tauri-plugin-vector-store/permissions/schemas/: schema.json
tauri-plugin-vector-store/src/: commands.rs  embed.rs  error.rs  lib.rs
