[package]
name = "tauri-plugin-vector-store"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-vector-store"

[dependencies]
tauri = { version = "2.1.0" }
serde = "1.0"
thiserror = "2"
rusqlite = "0.32.1"
sqlite-vec = "0.1.6"

[build-dependencies]
tauri-plugin = { version = "2.0.2", features = ["build"] }
