[package]
name = "tauri-plugin-vector-store"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-vector-store"

[dependencies]
tauri = { version = "2.1.0" }
serde = "1.0"
thiserror = "2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
sqlite-vec = "0.1.6"
zerocopy = "0.8.13"
ort = {version = "=2.0.0-rc.9", features = ["coreml"] }
curl = "0.4.47"
tokio = { version = "1.42.0", features = ["fs"] }
tokenizers = { version = "0.21.0", features = ["http"] }
ndarray = "0.16.1"

[build-dependencies]
tauri-plugin = { version = "2.0.2", features = ["build"] }
